# alfred-json

./: CHANGELOG  CMakeLists.txt  Makefile  README  README.md  alfred.h  batadv_query.c  batadv_query.h  client.c  debugfs.c  debugfs.h  hash.c  hash.h  list.h  main.c  netsock.c  output_binary.c  output_json.c  output_string.c  packet.h  recv.c  send.c  server.c  unix_sock.c  util.c  zcat.c
debian/: changelog  control  copyright
src/: CMakeLists.txt  blacklist.c  blacklist.h  main.c  output.h  output_binary.c  output_json.c  output_string.c  zcat.c  zcat.h
vis/: Makefile  debugfs.c  debugfs.h  vis.c  vis.h
